<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.twistedblizzard.cardsagainsthumanity.Debug">

    <Button
        android:id="@+id/prefsbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/settingsbutton"
        android:onClick="prefsDebug"
        android:text="@string/debug_code_prefs" />

    <Button
        android:id="@+id/settingsbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bus1button"
        android:onClick="settingsDebug"
        android:text="@string/debug_code_settings" />

    <Button
        android:id="@+id/bus1button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bus2button"
        android:onClick="blackUs1Debug"
        android:text="@string/debug_code_bus1" />

    <Button
        android:id="@+id/bus2button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bus3button"
        android:onClick="blackUs2Debug"
        android:text="@string/debug_code_bus2" />

    <Button
        android:id="@+id/bus3button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/wusbutton"
        android:onClick="blackUs3Debug"
        android:text="@string/debug_code_bus3" />

    <Button
        android:id="@+id/wusbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="whiteUsDebug"
        android:text="@string/debug_code_wus" />

</RelativeLayout>
